Add complete run_test

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ ELORA_BASE_API_URL = "http://localhost:8000"
 ELORA_USER_NAME = "admin"
 ELORA_PASSWORD = "admin"
 CSV_FILE_PATH = "./valid_example.csv"
+SUBS_CSV_FILE_PATH = "./subs_example.csv"
+CONFIGS_DIR = "./configs"
+RESULTS_DIR = "./results"
+TEST_URL = "https://www.google.com/generate_204"
