Add q param to config file

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ SUBS_CSV_FILE_PATH = "./subs_example.csv"
 CONFIGS_DIR = "./configs"
 RESULTS_DIR = "./results"
 TEST_URL = "https://www.google.com/generate_204"
+CONFIGS_Q = "T1"
